## Input file for automake

SUBDIRS = color datatransfer event font geom image peer print

EXTRA_DIST = \
ActiveEvent.java \
Adjustable.java	\
AWTError.java \
AWTEvent.java \
AWTEventMulticaster.java \
AWTException.java \
AWTPermission.java \
BorderLayout.java \
Button.java \
Canvas.java \
CardLayout.java \
CheckboxGroup.java \
Checkbox.java \
CheckboxMenuItem.java \
Choice.java \
Color.java \
Component.java \
ComponentOrientation.java \
Composite.java \
CompositeContext.java \
Container.java \
Cursor.java \
Dialog.java \
Dimension.java \
DisplayMode.java \
EventDispatchThread.java \
Event.java \
EventQueue.java	\
FileDialog.java	\
FlowLayout.java	\
Font.java \
FontFormatException.java \
FontMetrics.java \
Frame.java \
Graphics2D.java \
GraphicsConfigTemplate.java \
GraphicsConfiguration.java \
GraphicsDevice.java \
GraphicsEnvironment.java \
Graphics.java \
GridBagConstraints.java \
GridLayout.java	\
HeadlessException.java \
IllegalComponentStateException.java \
Image.java \
Insets.java \
ItemSelectable.java \
KeyEventDispatcher.java \
KeyEventPostProcessor.java \
Label.java \
LayoutManager2.java \
LayoutManager.java \
List.java \
MediaTracker.java \
MenuBar.java \
MenuComponent.java \
MenuContainer.java \
MenuItem.java \
Menu.java \
MenuShortcut.java \
PaintContext.java \
Paint.java \
Panel.java \
Point.java \
Polygon.java \
PopupMenu.java \
PrintGraphics.java \
PrintJob.java \
Rectangle.java \
RenderingHints.java \
Scrollbar.java \
ScrollPaneAdjustable.java \
ScrollPane.java	\
Shape.java \
Stroke.java \
SystemColor.java \
TextArea.java \
TextComponent.java \
TextField.java \
Toolkit.java \
Transparency.java \
Window.java
