## Input file for automake

SUBDIRS = color datatransfer dnd event font geom im image peer print

EXTRA_DIST = \
ActiveEvent.java \
Adjustable.java	\
AlphaComposite.java \
AttributeValue.java \
AWTError.java \
AWTEvent.java \
AWTEventMulticaster.java \
AWTException.java \
AWTKeyStroke.java \
AWTPermission.java \
BasicStroke.java \
BorderLayout.java \
BufferCapabilities.java \
Button.java \
Canvas.java \
CardLayout.java \
CheckboxGroup.java \
Checkbox.java \
CheckboxMenuItem.java \
Choice.java \
Color.java \
Component.java \
ComponentOrientation.java \
Composite.java \
CompositeContext.java \
Container.java \
ContainerOrderFocusTraversalPolicy.java \
Cursor.java \
DefaultFocusTraversalPolicy.java \
DefaultKeyboardFocusManager.java \
Dialog.java \
Dimension.java \
DisplayMode.java \
EventDispatchThread.java \
Event.java \
EventQueue.java	\
FileDialog.java	\
FlowLayout.java	\
FocusTraversalPolicy.java \
Font.java \
FontFormatException.java \
FontMetrics.java \
Frame.java \
GradientPaint.java \
Graphics2D.java \
GraphicsConfigTemplate.java \
GraphicsConfiguration.java \
GraphicsDevice.java \
GraphicsEnvironment.java \
Graphics.java \
GridBagConstraints.java \
GridLayout.java	\
HeadlessException.java \
IllegalComponentStateException.java \
Image.java \
ImageCapabilities.java \
Insets.java \
ItemSelectable.java \
JobAttributes.java \
KeyboardFocusManager.java \
KeyEventDispatcher.java \
KeyEventPostProcessor.java \
Label.java \
LayoutManager2.java \
LayoutManager.java \
List.java \
MediaTracker.java \
MenuBar.java \
MenuComponent.java \
MenuContainer.java \
MenuItem.java \
Menu.java \
MenuShortcut.java \
PageAttributes.java \
PaintContext.java \
Paint.java \
Panel.java \
Point.java \
Polygon.java \
PopupMenu.java \
PrintGraphics.java \
PrintJob.java \
Rectangle.java \
RenderingHints.java \
Robot.java \
Scrollbar.java \
ScrollPaneAdjustable.java \
ScrollPane.java	\
Shape.java \
Stroke.java \
SystemColor.java \
TextArea.java \
TextComponent.java \
TextField.java \
TexturePaint.java \
Toolkit.java \
Transparency.java \
Window.java \
package.html

