EXTRA_DIST = \
BeanDescriptor.java \
PropertyChangeEvent.java \
BeanInfo.java \
PropertyChangeListener.java \
Beans.java \
PropertyChangeSupport.java \
PropertyDescriptor.java \
ChangeLog \
PropertyEditor.java \
Customizer.java \
PropertyEditorManager.java \
EventSetDescriptor.java \
PropertyEditorSupport.java \
FeatureDescriptor.java \
PropertyVetoException.java \
IndexedPropertyDescriptor.java \
SimpleBeanInfo.java \
IntrospectionException.java \
TODO \
Introspector.java \
VetoableChangeListener.java \
VetoableChangeSupport.java \
MethodDescriptor.java \
Visibility.java \
ParameterDescriptor.java

