## input for automake

SUBDIRS = beancontext

EXTRA_DIST = \
BeanDescriptor.java \
BeanInfo.java \
Beans.java \
Customizer.java \
DesignMode.java \
EventSetDescriptor.java \
FeatureDescriptor.java \
IndexedPropertyDescriptor.java \
IntrospectionException.java \
Introspector.java \
MethodDescriptor.java \
ParameterDescriptor.java \
PropertyChangeEvent.java \
PropertyChangeListener.java \
PropertyChangeSupport.java \
PropertyDescriptor.java \
PropertyEditor.java \
PropertyEditorManager.java \
PropertyEditorSupport.java \
Customizer.java \
PropertyVetoException.java \
SimpleBeanInfo.java \
TODO \
VetoableChangeListener.java \
VetoableChangeSupport.java \
Visibility.java 

