## Input file for automake to generate the Makefile.in used by configure

javaiodir = $(datadir)/java/io

javaio_JAVA = BufferedInputStream.java ByteArrayInputStream.java \
              CharConversionException.java DataInput.java \
              DataInputStream.java DataOutput.java EOFException.java \
              Externalizable.java FileNotFoundException.java \
              FilenameFilter.java FilterInputStream.java IOException.java \
              InputStream.java InterruptedIOException.java \
              InvalidClassException.java InvalidObjectException.java \
              LineNumberInputStream.java NotActiveException.java \
              NotSerializableException.java ObjectInput.java \
              ObjectInputValidation.java ObjectOutput.java \
              ObjectStreamException.java OptionalDataException.java \
              PushbackInputStream.java Replaceable.java Resolvable.java \
              SequenceInputStream.java Serializable.java \
              StreamCorruptedException.java StringBufferInputStream.java \
              SyncFailedException.java UTFDataFormatException.java \
              UnsupportedEncodingException.java WriteAbortedException.java



