## Input file for automake to generate the Makefile.in used by configure

javalangdir = $(datadir)/java/lang

javalang_JAVA = Boolean.java Byte.java Cloneable.java Compiler.java Comparable.java Integer.java Long.java Number.java Runnable.java Short.java String.java StringBuffer.java UnsupportedOperationException.java Void.java
