## Input file for automake to generate the Makefile.in used by configure

javanetdir = $(datadir)/java/net

javanet_JAVA = BindException.java ConnectException.java ContentHandler.java \
               ContentHandlerFactory.java DatagramPacket.java \
               DatagramSocket.java DatagramSocketImpl.java FileNameMap.java \
               HttpURLConnection.java InetAddress.java \
               MalformedURLException.java \
               MimeTypeMapper.java MulticastSocket.java \
               NoRouteToHostException.java PasswordAuthentication.java \
               PlainDatagramSocketImpl.java PlainSocketImpl.java \
               ProtocolException.java ServerSocket.java Socket.java \
               SocketException.java SocketImpl.java SocketImplFactory.java \
               SocketInputStream.java SocketOptions.java \
               SocketOutputStream.java URL.java URLConnection.java \
               URLEncoder.java URLStreamHandler.java \
               URLStreamHandlerFactory.java UnknownHostException.java \
               UnknownServiceException.java

EXTRA_DIST = Authenticator.java JarURLConnection.java NetPermission.java \
             SocketPermission.java STATUS TODO

