## Input file for automake to generate the Makefile.in used by configure

EXTRA_DIST = \
STATUS \
TODO \
Authenticator.java \
BindException.java \
ConnectException.java \
ContentHandler.java \
ContentHandlerFactory.java \
DatagramPacket.java \
DatagramSocket.java \
DatagramSocketImpl.java \
FileNameMap.java \
HttpURLConnection.java \
InetAddress.java \
JarURLConnection.java \
MalformedURLException.java \
MimeTypeMapper.java \
MulticastSocket.java \
NetPermission.java \
NoRouteToHostException.java \
PasswordAuthentication.java \
PlainDatagramSocketImpl.java \
PlainSocketImpl.java \
ProtocolException.java \
ServerSocket.java \
Socket.java \
SocketException.java \
SocketImpl.java \
SocketImplFactory.java \
SocketInputStream.java \
SocketOptions.java \
SocketOutputStream.java \
SocketPermission.java \
URL.java \
URLConnection.java \
URLDecoder.java \
URLEncoder.java \
URLStreamHandler.java \
URLStreamHandlerFactory.java \
UnknownHostException.java \
UnknownServiceException.java
