## Input file for automake to generate the Makefile.in used by configure

EXTRA_DIST = \
STATUS \
TODO \
Authenticator.java \
BindException.java \
ConnectException.java \
ContentHandlerFactory.java \
ContentHandler.java \
DatagramPacket.java \
DatagramSocketImpl.java \
DatagramSocket.java \
FileNameMap.java \
HttpURLConnection.java \
InetAddress.java \
JarURLConnection.java \
MalformedURLException.java \
MimeTypeMapper.java \
MulticastSocket.java \
NetPermission.java \
NoRouteToHostException.java \
PasswordAuthentication.java \
PlainDatagramSocketImpl.java \
PlainSocketImpl.java \
ProtocolException.java \
ServerSocket.java \
SocketException.java \
SocketImplFactory.java \
SocketImpl.java \
SocketInputStream.java \
Socket.java \
SocketOptions.java \
SocketOutputStream.java \
SocketPermission.java \
UnknownHostException.java \
UnknownServiceException.java \
URLClassLoader.java \
URLConnection.java \
URLDecoder.java \
URLEncoder.java \
URL.java \
URLStreamHandlerFactory.java \
URLStreamHandler.java
