## Input file for automake to generate the Makefile.in used by configure

SUBDIRS = acl interfaces

EXTRA_DIST = \
AccessControlException.java \
AllPermission.java \
BasicPermission.java \
Certificate.java \
CodeSource.java \
DigestException.java \
GeneralSecurityException.java \
Guard.java \
GuardedObject.java \
InvalidAlgorithmParameterException.java \
InvalidKeyException.java \
InvalidParameterException.java \
Key.java \
KeyException.java \
KeyManagementException.java \
KeyStoreException.java \
NoSuchAlgorithmException.java \
NoSuchProviderException.java \
Permission.java \
PermissionCollection.java \
Permissions.java \
Principal.java \
PrivateKey.java \
PrivilegedAction.java \
PrivilegedActionException.java \
PrivilegedExceptionAction.java \
ProtectionDomain.java \
Provider.java \
ProviderException.java \
PublicKey.java \
SecurityPermission.java \
SignatureException.java \
UnrecoverableKeyException.java \
UnresolvedPermission.java
