## Input file for automake to generate the Makefile.in used by configure

SUBDIRS = acl cert interfaces spec

EXTRA_DIST = \
AccessControlException.java \
AllPermission.java \
BasicPermission.java \
Certificate.java \
CodeSource.java \
DigestException.java \
DigestOutputStream.java \
GeneralSecurityException.java \
Guard.java \
GuardedObject.java \
InvalidAlgorithmParameterException.java \
InvalidKeyException.java \
InvalidParameterException.java \
Key.java \
KeyException.java \
KeyManagementException.java \
KeyStoreException.java \
MessageDigest.java \
MessageDigestSpi.java \
NoSuchAlgorithmException.java \
NoSuchProviderException.java \
Permission.java \
PermissionCollection.java \
Permissions.java \
Principal.java \
PrivateKey.java \
PrivilegedAction.java \
PrivilegedActionException.java \
PrivilegedExceptionAction.java \
ProtectionDomain.java \
Provider.java \
ProviderException.java \
PublicKey.java \
Security.java \
SecurityPermission.java \
SignatureException.java \
UnrecoverableKeyException.java \
UnresolvedPermission.java
