## input for automake

EXTRA_DIST = \
Array.java \
BatchUpdateException.java \
Blob.java \
CallableStatement.java \
Clob.java \
Connection.java \
DataTruncation.java \
DatabaseMetaData.java \
Date.java \
Driver.java \
DriverManager.java \
DriverPropertyInfo.java \
PreparedStatement.java \
Ref.java \
ResultSet.java \
ResultSetMetaData.java \
SQLData.java \
SQLException.java \
SQLInput.java \
SQLOutput.java \
SQLWarning.java \
Statement.java \
Struct.java \
Time.java \
Timestamp.java \
Types.java
