## Input file for automake to generate the Makefile.in used by configure

javautildir = $(datadir)/java/util

javautil_JAVA = AbstractCollection.java AbstractList.java AbstractMap.java AbstractSequentialList.java AbstractSet.java Arrays.java Collection.java Collections.java Comparator.java ConcurrentModificationException.java EmptyStackException.java Enumeration.java Iterator.java List.java ListIterator.java Map.java NoSuchElementException.java Set.java SortedMap.java SortedSet.java

