## Input file for automake to generate the Makefile.in used by configure

EXTRA_DIST = \
ChangeLog \
AbstractCollection.java \
AbstractList.java \
AbstractMap.java \
AbstractSequentialList.java \
AbstractSet.java \
Arrays.java \
BasicMapEntry.java \
BitSet.java \
Bucket.java \
Calendar.java \
Collection.java \
Collections.java \
Comparator.java \
ConcurrentModificationException.java \
Date.java \
Dictionary.java \
DoubleEnumeration.java \
EmptyStackException.java \
Enumeration.java \
GregorianCalendar.java \
HashMap.java \
HashSet.java \
Hashtable.java \
Iterator.java \
LinkedList.java \
List.java \
ListIterator.java \
ListResourceBundle.java \
Locale.java \
Map.java \
MissingResourceException.java \
NoSuchElementException.java \
Properties.java \
PropertyResourceBundle.java \
ResourceBundle.java \
Set.java \
SimpleTimeZone.java \
SortedMap.java \
SortedSet.java \
Stack.java \
StringTokenizer.java \
TimeZone.java \
Vector.java
