## Input file for automake to generate the Makefile.in used by configure

SUBDIRS = attribute event

EXTRA_DIST = \
AttributeException.java \
CancelablePrintJob.java \
Doc.java \
DocFlavor.java \
DonPrintJob.java \
FlavorException.java \
MultiDoc.java \
MultiDocPrintJob.java \
MultiDocPrintService.java \
PrintException.java \
PrintService.java \
ServiceUIFactory.java \
StreamPrintService.java \
URIException.java

