## Input file for automake to generate the Makefile.in used by configure

SUBDIRS = border event plaf table text tree undo

EXTRA_DIST = \
AbstractAction.java \
AbstractButton.java \
AbstractListModel.java \
AbstractSet.java \
Action.java \
BorderFactory.java \
Box.java \
BoxLayout.java \
ButtonGroup.java \
ButtonModel.java \
CellEditor.java \
ComponentInputMap.java \
DefaultButtonModel.java \
DefaultCellRenderer.java \
DefaultListModel.java \
DefaultListSelectionModel.java \
GrayFilter.java \
Icon.java \
ImageIcon.java \
InputMap.java \
JApplet.java \
JButton.java \
JCheckBox.java \
JComponent.java \
JDialog.java \
JEditorPane.java \
JFrame.java \
JInternalFrame.java \
JLabel.java \
JLayeredPane.java \
JList.java \
JMenuBar.java \
JOptionPane.java \
JPanel.java \
JRadioButton.java \
JRootPane.java \
JScrollBar.java \
JScrollPane.java \
JTabbedPane.java \
JTable.java \
JTextField.java \
JToggleButton.java \
JToolTip.java \
JTree.java \
JViewport.java \
JWindow.java \
KeyStroke.java \
ListCellRenderer.java \
ListModel.java \
ListSelectionModel.java \
LookAndFeel.java \
MenuElement.java \
MenuSelectionManager.java \
Scrollable.java \
SwingConstants.java \
SwingUtilities.java \
Timer.java \
ToggleButtonModel.java \
UIDefaults.java \
UIManager.java \
UnsupportedLookAndFeelException.java \
package.html

